# Acquis

./: .dockerignore  .gitignore  Dockerfile  Makefile  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_smoke.py
